dynamic master - Test Topology reconfig

--- a/.env_master
+++ b/.env_master
@@ -8,15 +8,15 @@
 #  -v "$(pwd)"/nexus_root/.direwolf:/home/bsb/.direwolf \
 #  -v "$(pwd)"/nexus_root/.nexus:/home/bsb/.nexus \
 #  --device /dev/snd:/dev/snd \
-#  --device /dev/ttyACM0:/dev/ttyLORA \
+#  --device /dev/ttyAMA0:/dev/ttyLORA \
 #  bsbdock/nexus:dev_linux-arm bash
 #
-# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /bsb/nexus_server/nexus_server.py
-# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus:dev_linux-amd64 python3 /bsb/nexus_server/nexus_server.py
+# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 nexus_server/nexus_server.py
+# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus:dev_linux-amd64 python3 nexus_server/nexus_server.py
 # docker run --rm -it bsbdock/nexus:dev bash
 # docker exec -it nexus-server_node01 bash
 # docker exec -it nexus-server_node01 nomadnet
-# docker exec -it nexus-server_node01 python3 /bsb/nexus_server/nexus_server.py
+# docker exec -it nexus-server_node01 python3 nexus_server/nexus_server.py
 # python3 ~/nexus/bsbdock.nexus_context/nexus_server/nexus_server.py
 # python3 ./bsbdock.nexus_context/nexus_server/nexus_server.py --aspect=delta --role={\"cluster\":\"lora\"} --timeout=90 --longpoll=60
 # docker exec -it nexus-sever entrypoint.sh nomadnet
@@ -178,7 +178,7 @@
 #paulchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=35%
 #paulchen:DIREWOLF_OPTIONS="-t 0 -T %T -d no -q dx -a 20"
 #paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
-#paulchen:RNS_AUTOSTART=True
+#paulchen:RNS_AUTOSTART=False
 #paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
 #paulchen:NOMADNET_AUTOSTART=True
 #paulchen:NOMADNET_INDEX_SCRIPT=True
