dynamic master - remove standalone rnodeconf installation from image

--- a/.env_master
+++ b/.env_master
@@ -2,14 +2,15 @@
 # Environment used by docker-compose
 #
 # git clone -b development https://github.com/HarlekinSimplex/nexus.git
-# docker run --rm -it \
-#  -v "$(pwd)"/nexus_root/.reticulum:/home/bsb/.reticulum \
-#  -v "$(pwd)"/nexus_root/.nomadnetwork:/home/bsb/.nomadnetwork \
-#  -v "$(pwd)"/nexus_root/.direwolf:/home/bsb/.direwolf \
+#  docker run --rm -it \
+#  -v "$(pwd)"/nexus_root/.reticulum/paulchen:/home/bsb/.reticulum \
+#  -v "$(pwd)"/nexus_root/.nomadnetwork/paulchen:/home/bsb/.nomadnetwork \
+#  -v "$(pwd)"/nexus_root/.direwolf/paulchen:/home/bsb/.direwolf \
 #  -v "$(pwd)"/nexus_root/.nexus:/home/bsb/.nexus \
 #  --device /dev/snd:/dev/snd \
-#  --device /dev/ttyAMA0:/dev/ttyLORA \
-#  bsbdock/nexus:dev_linux-arm bash
+#  --device /dev/ttyACM0:/dev/ttyRNODE \
+#  --device /dev/ttyUSB0:/dev/ttyRNODE2 \
+#  bsbdock/nexus:dev_linux-arm64 bash
 #
 # docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 nexus_server/nexus_server.py
 # docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus:dev_linux-amd64 python3 nexus_server/nexus_server.py
