--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -39,7 +39,7 @@ RUN --mount=type=tmpfs,target=/root/.cargo \
     curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly && \
     export PATH="/root/.cargo/bin:$PATH" && \
     pip3 install cryptography && \
-    pip3 install rns lxmf nomadnet rnodeconf requests && \
+    pip3 install rns lxmf nomadnet requests && \
     pip3 install Django gunicorn psycopg2-binary gevent && \
     cp -r /root/.cargo /root/.cargo.bak
 RUN cp -rT /root/.cargo.bak /root/.cargo && rm -R /root/.cargo.bak
