dynamic master - demo / test nodes config change

--- a/.env_master
+++ b/.env_master
@@ -187,7 +187,7 @@
 #paulchen:NEXUS_ASPECT=home
 #paulchen:NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
 #paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
-##paulchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
+#paulchen:#NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
 #paulchen:NEXUS_LONGPOLL=300
 #paulchen:NEXUS_TIMEOUT=43200
@@ -222,8 +222,8 @@
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home"}
-#karlchen:#NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#karlchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
+#karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#karlchen:#NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
 #karlchen:NEXUS_LONGPOLL=14400
 #karlchen:NEXUS_TIMEOUT=43200
