--- a/nexus_root/.reticulum/paulchen/config
+++ b/nexus_root/.reticulum/paulchen/config
@@ -36,8 +36,8 @@
     codingrate = 5
     id_callsign = DD8SB-1
     id_interval = 60
-    network_name = myTwinCluster
-    passphrase = myTwinCluster
+#    network_name = myTwinCluster
+#    passphrase = myTwinCluster
     flow_control = False
 
   [[RNode LoRa Interface 169]]
