--- a/nexus_root/.reticulum/radiobox/config
+++ b/nexus_root/.reticulum/radiobox/config
@@ -36,8 +36,8 @@
     codingrate = 5
     id_callsign = DD8SB-2
     id_interval = 60
-    network_name = myTwinCluster
-    passphrase = myTwinCluster
+#    network_name = myTwinCluster
+#    passphrase = myTwinCluster
     flow_control = False
 
   [[TCP KISS Interface #1]]
