dynamic master - demo / test nodes config change

--- a/.env_master
+++ b/.env_master
@@ -1,17 +1,24 @@
 ####################################################################################################
 # Environment used by docker-compose
 #
+### To run container with template config (change RNODE devices on demand)
 # git clone -b development https://github.com/HarlekinSimplex/nexus.git
 #  docker run --rm -it \
-#  -v "$(pwd)"/nexus_root/.reticulum/paulchen:/home/bsb/.reticulum \
-#  -v "$(pwd)"/nexus_root/.nomadnetwork/paulchen:/home/bsb/.nomadnetwork \
-#  -v "$(pwd)"/nexus_root/.direwolf/paulchen:/home/bsb/.direwolf \
+#  -v "$(pwd)"/nexus_root/.reticulum/<template>:/home/bsb/.reticulum \
+#  -v "$(pwd)"/nexus_root/.nomadnetwork/<template>:/home/bsb/.nomadnetwork \
+#  -v "$(pwd)"/nexus_root/.direwolf/<template>:/home/bsb/.direwolf \
 #  -v "$(pwd)"/nexus_root/.nexus:/home/bsb/.nexus \
 #  --device /dev/snd:/dev/snd \
 #  --device /dev/ttyACM0:/dev/ttyRNODE \
 #  --device /dev/ttyUSB0:/dev/ttyRNODE2 \
 #  bsbdock/nexus:dev_linux-arm64 bash
 #
+### Template to run rnodeconf of the container
+# docker run --rm -it \
+# --device /dev/ttyACM0:/dev/ttyACM0 \
+# bsbdock/nexus:dev_linux-arm64 bash
+#
+### Some docker run templates to pick and modify on demand
 # docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 nexus_server/nexus_server.py
 # docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus:dev_linux-amd64 python3 nexus_server/nexus_server.py
 # docker run --rm -it bsbdock/nexus:dev bash
@@ -22,6 +29,8 @@
 # python3 ./bsbdock.nexus_context/nexus_server/nexus_server.py --aspect=delta --role={\"cluster\":\"lora\"} --timeout=90 --longpoll=60
 # docker exec -it nexus-sever entrypoint.sh nomadnet
 
+### Predefined configuration templates
+#
 #default:#################################################################
 #default:# Default values used within the Nexus Container
 #default:# You can overwrite those values to adjust them to your needs
@@ -334,7 +343,7 @@
 #cb_home:NEXUS_ROLE={"cluster":"home"}
 #cb_home:#NEXUS_LONGPOLL=60
 #cb_home:#NEXUS_TIMEOUT=43200
-#cb_home:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8242","cluster":"delta"}]
+#cb_home:#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8242","cluster":"delta"}]
 
 # --------------------------------------------------------
 # 'cb_delta' constant-beta <delta>[delta]:[home]
@@ -356,7 +365,7 @@
 #cb_delta:NOMADNET_INDEX_SCRIPT=True
 #cb_delta:NEXUS_ASPECT=delta
 #cb_delta:NEXUS_ROLE={"cluster":"delta"}
-#cb_delta:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"home"}]
+#cb_delta:#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"home"}]
 #cb_delta:#NEXUS_LONGPOLL=60
 #cb_delta:#NEXUS_TIMEOUT=43200
 
