dynamic master - demo / test nodes config change

--- a/.env_master
+++ b/.env_master
@@ -391,7 +391,7 @@
 #cb_hub:NOMADNET_AUTOSTART=False
 #cb_hub:NOMADNET_INDEX_SCRIPT=True
 #cb_hub:NEXUS_ASPECT=delta
-#cb_hub:NEXUS_ROLE={"cluster":"delta","gate":"lora.delta"}
+#cb_hub:NEXUS_ROLE={"cluster":"delta"}
 #cb_hub:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #cb_hub:#NEXUS_LONGPOLL=60
 #cb_hub:#NEXUS_TIMEOUT=43200
