--- a/nexus_root/.reticulum/cb_hub/config
+++ b/nexus_root/.reticulum/cb_hub/config
@@ -10,6 +10,14 @@
 
 [interfaces]
 
+  [[TCP Server Interface Nexus.Hub]]
+    type = TCPServerInterface
+    interface_enabled = True
+    outgoing = True
+    listen_ip = 0.0.0.0
+    # Don't change the server port because it is mapped into the container by docker-compose.yml
+    listen_port = 4242
+
   [[TCP Client Interface Nexus.Delta]]
     type = TCPClientInterface
     interface_enabled = True
@@ -17,9 +25,3 @@
     target_host = nexus.deltamatrix.org
     target_port = 4252
 
-  [[TCP Server Interface Nexus.Hub]]
-    type = TCPServerInterface
-    interface_enabled = True
-    outgoing = True
-    listen_ip = 0.0.0.0
-    listen_port = 4253
