--- a/.env_master
+++ b/.env_master
@@ -230,7 +230,7 @@
 #karlchen:NOMADNET_INDEX_SCRIPT=True
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
-#karlchen:NEXUS_ROLE={"cluster":"home"}
+#karlchen:NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
 #karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #karlchen:#NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
@@ -432,7 +432,7 @@
 #cb_cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
 #cb_cockpit:NEXUS_NETWORK=nexus-cockpit-net
 #cb_cockpit:NEXUS_PORT_RNSAPI=4255
-#cb_cockpit:NEXUS_PORT_WEB=127.0.0.1:4285
+#cb_cockpit:NEXUS_PORT_WEB=127.0.0.1:4385
 #cb_cockpit:NEXUS_PORT_JSONAPI=127.0.0.1:4345
 #cb_cockpit:RNS_CONFIG=/home/bsb/.reticulum/cb_cockpit
 #cb_cockpit:RNS_AUTOSTART=True
