--- a/nexus_root/.reticulum/cb_dev/config
+++ b/nexus_root/.reticulum/cb_dev/config
@@ -15,4 +15,5 @@
     interface_enabled = True
     outgoing = True
     listen_ip = 0.0.0.0
+    # Don't change the server port because it is mapped into the container by docker-compose.yml
     listen_port = 4242
