--- a/.env_master
+++ b/.env_master
@@ -392,7 +392,7 @@
 #cb_hub:NOMADNET_INDEX_SCRIPT=True
 #cb_hub:NEXUS_ASPECT=delta
 #cb_hub:NEXUS_ROLE={"cluster":"delta"}
-#cb_hub:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+#cb_hub:#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #cb_hub:#NEXUS_LONGPOLL=60
 #cb_hub:#NEXUS_TIMEOUT=43200
 
@@ -416,7 +416,7 @@
 #cb_dev:NOMADNET_INDEX_SCRIPT=True
 #cb_dev:NEXUS_ASPECT=dev
 #cb_dev:NEXUS_ROLE={"cluster":"dev"}
-#cb_dev:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
+#cb_dev:#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
 #cb_dev:NEXUS_SHORTPOLL=10
 #cb_dev:NEXUS_LONGPOLL=60
 #cb_dev:NEXUS_TIMEOUT=43200
