--- a/.env_master
+++ b/.env_master
@@ -195,7 +195,7 @@
 #paulchen:NGINX_AUTOSTART=True
 #paulchen:NEXUS_ASPECT=home
 #paulchen:#NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
-#paulchen:NEXUS_ROLE={"cluster":"TST"}
+#paulchen:NEXUS_ROLE={"cluster":"home"}
 #paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #paulchen:#NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
@@ -232,7 +232,7 @@
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
 #karlchen:#NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
-#karlchen:NEXUS_ROLE={"cluster":"TST"}
+#karlchen:NEXUS_ROLE={"cluster":"home"}
 #karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #karlchen:#NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
@@ -295,7 +295,7 @@
 #radiobox:NEXUS_NETWORK=nexus-radiobox-net
 #radiobox:NEXUS_ASPECT=home
 #radiobox:#NEXUS_ROLE={"cluster":"delta","gate":"delta.home"}
-#radiobox:NEXUS_ROLE={"cluster":"TST"}
+#radiobox:NEXUS_ROLE={"cluster":"home"}
 #radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #radiobox:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #radiobox:#NEXUS_LONGPOLL=60
