dynamic master - Debug Config Changes

--- a/.env_master
+++ b/.env_master
@@ -194,8 +194,7 @@
 #paulchen:NOMADNET_INDEX_SCRIPT=True
 #paulchen:NGINX_AUTOSTART=True
 #paulchen:NEXUS_ASPECT=home
-#paulchen:#NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
-#paulchen:NEXUS_ROLE={"cluster":"home"}
+#paulchen:NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
 #paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #paulchen:#NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
@@ -231,8 +230,7 @@
 #karlchen:NOMADNET_INDEX_SCRIPT=True
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
-#karlchen:#NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
-#karlchen:NEXUS_ROLE={"cluster":"home"}
+#karlchen:NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
 #karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #karlchen:#NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
@@ -294,8 +292,7 @@
 #radiobox:NEXUS_CONTAINER_ALIAS=nexus-radiobox
 #radiobox:NEXUS_NETWORK=nexus-radiobox-net
 #radiobox:NEXUS_ASPECT=home
-#radiobox:#NEXUS_ROLE={"cluster":"delta","gate":"delta.home"}
-#radiobox:NEXUS_ROLE={"cluster":"home"}
+#radiobox:NEXUS_ROLE={"cluster":"delta","gate":"delta.home"}
 #radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #radiobox:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #radiobox:#NEXUS_LONGPOLL=60
