--- a/.env_master
+++ b/.env_master
@@ -234,7 +234,7 @@
 #karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #karlchen:#NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
-#karlchen:NEXUS_LONGPOLL=14400
+#karlchen:NEXUS_LONGPOLL=300
 #karlchen:NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
@@ -266,8 +266,8 @@
 #orangepi:NEXUS_NETWORK=nexus-orangepi-net
 #orangepi:NEXUS_ASPECT=home
 #orangepi:NEXUS_ROLE={"cluster":"home"}
-#orangepi:#NEXUS_LONGPOLL=60
-#orangepi:#NEXUS_TIMEOUT=43200
+#orangepi:NEXUS_LONGPOLL=300
+#orangepi:NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'radiobox' radiobox <delta>[delta, delta.home]:[]
@@ -295,8 +295,8 @@
 #radiobox:NEXUS_ROLE={"cluster":"delta","gate":"delta.home"}
 #radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #radiobox:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
-#radiobox:#NEXUS_LONGPOLL=60
-#radiobox:#NEXUS_TIMEOUT=43200
+#radiobox:NEXUS_LONGPOLL=300
+#radiobox:NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'cb_reticulum' constant-beta RNS / Nomadnet only
@@ -341,8 +341,8 @@
 #cb_home:NEXUS_PORT_JSONAPI=127.0.0.1:4341
 #cb_home:NEXUS_ASPECT=home
 #cb_home:NEXUS_ROLE={"cluster":"home"}
-#cb_home:#NEXUS_LONGPOLL=60
-#cb_home:#NEXUS_TIMEOUT=43200
+#cb_home:NEXUS_LONGPOLL=300
+#cb_home:NEXUS_TIMEOUT=43200
 #cb_home:#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8242","cluster":"delta"}]
 
 # --------------------------------------------------------
