--- a/.env_master
+++ b/.env_master
@@ -232,7 +232,7 @@
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
 #karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#karlchen:#NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
+#karlchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
 #karlchen:NEXUS_LONGPOLL=300
 #karlchen:NEXUS_TIMEOUT=43200
