dynamic master - Debug Config Changes

--- a/.env_master
+++ b/.env_master
@@ -264,6 +264,8 @@
 #orangepi:NEXUS_CONTAINER=nexus-orangepi
 #orangepi:NEXUS_CONTAINER_ALIAS=nexus-orangepi
 #orangepi:NEXUS_NETWORK=nexus-orangepi-net
+#orangepi:#NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#orangepi:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #orangepi:NEXUS_ASPECT=home
 #orangepi:NEXUS_ROLE={"cluster":"home"}
 #orangepi:NEXUS_LONGPOLL=300
