dynamic master - Debug Config Changes

--- a/.env_master
+++ b/.env_master
@@ -333,7 +333,7 @@
 #cb_home:NEXUS_CONTAINER_ALIAS=nexus-home
 #cb_home:NEXUS_NETWORK=nexus-home-net
 #cb_home:RNS_CONFIG=/home/bsb/.reticulum/cb_home
-#cb_home:RNS_AUTOSTART=False
+#cb_home:RNS_AUTOSTART=True
 #cb_home:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_home
 #cb_home:NOMADNET_AUTOSTART=True
 #cb_home:NOMADNET_INDEX_SCRIPT=True
